--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@analytics/google-analytics": "^1.0.7",
     "@gsap/react": "^2.1.0",
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
-    "@sentry/react": "^7.106.0",
-    "@sentry/vite-plugin": "^2.14.3",
+    "@sentry/react": "^7.118.0",
+    "@sentry/vite-plugin": "^2.20.1",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "three": "^0.162.0"
   },
   "devDependencies": {
